Aggiunge api per recupero dati utente
