# openapi/user-api.yaml
@@ -13,23 +13,22 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/RegisterRequest'
+              $ref: "#/components/schemas/RegisterRequest"
       responses:
-        '201':
+        "201":
           description: Utente registrato con successo
           content:
             application/json:
               schema:
                 type: string
                 example: "Utente registrato con successo"
-        '409':
+        "409":
           description: Username e/o Email già esistenti
           content:
             application/json:
               schema:
                 type: string
                 example: "Username e/o Email già esistenti"
-
 
   /api/users/login:
     post:
@@ -41,15 +40,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/LoginRequest'
+              $ref: "#/components/schemas/LoginRequest"
       responses:
-        '200':
+        "200":
           description: Token restituito
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/JwtResponse'
-        '401':
+                $ref: "#/components/schemas/JwtResponse"
+        "401":
           description: Credenziali non valide
 
   /api/users/user:
@@ -60,13 +59,13 @@ paths:
       security:
         - bearerAuth: []
       responses:
-        '200':
+        "200":
           description: Dati utente
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserResponse'
-        '401':
+                $ref: "#/components/schemas/UserResponse"
+        "401":
           description: Token non valido o assente
 
 components:
@@ -117,7 +116,7 @@ components:
       type: object
       properties:
         id:
-          type: integer
+          type: long
         name:
           type: string
         surname:
