# src/main/java/com/springmememuseumrest/controller/UserController.java
@@ -4,8 +4,11 @@ import org.openapispec.api.UserApi;
 import org.openapispec.model.JwtResponse;
 import org.openapispec.model.LoginRequest;
 import org.openapispec.model.RegisterRequest;
+import org.openapispec.model.UserResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.springmememuseumrest.service.UserService;
@@ -27,10 +30,15 @@ public class UserController implements UserApi {
 
     @Override
     public ResponseEntity<String> apiUsersRegisterPost(RegisterRequest registerRequest) {
-    if (userService.usersRegister(registerRequest)) {
-        return ResponseEntity.status(HttpStatus.CREATED).body("Utente registrato con successo");
-    } else {
-        return ResponseEntity.status(HttpStatus.CONFLICT).body("Username e/o Email già esistenti");
+        if (userService.usersRegister(registerRequest)) {
+            return ResponseEntity.status(HttpStatus.CREATED).body("Utente registrato con successo");
+        } else {
+            return ResponseEntity.status(HttpStatus.CONFLICT).body("Username e/o Email già esistenti");
+        }
     }
-}
+
+    @Override
+    public ResponseEntity<UserResponse> apiUsersUserGet() {
+        return userService.getUserData();
+    } 
 }
